fix(Transwarp): Imrpoves the layout of the transwarp card on small screen sizes. Fixes #2790

--- a/src/components/views/Transwarp/style.scss
+++ b/src/components/views/Transwarp/style.scss
@@ -27,8 +27,11 @@
     }
   }
   .power {
-    grid-row: 3/4;
+    grid-row: 3/5;
     grid-column: 3;
+    h1 {
+      font-size: 24px;
+    }
   }
   .activate {
     grid-row: 4;
